Broke down the Layout into partial views

--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -17,176 +17,12 @@
     <link href="~/css/create-post.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="navbar" id="navbar">
-        <a href="#" class="btn-hide hidden" id="navbar-hide"><i class="fa fa-xmark"></i></a>
-        <nav class="space-between">
-            <section>
-                <div class="d-flex justify-content-center align-items-center">
-                    <img class="logo-img-navbar" src="~/images/logo/logo_violet.png" />
-                </div>
-                <h5 class="nav-title">Main</h5>
-                <div class="nav-item px-1 hover">
-                    <a class="nav-link fs-6 px-2" asp-action="Dashboard" asp-controller="Home">
-                        <span class="oi fa-solid fa-gauge" aria-hidden="true"></span> Dashboard
-                    </a>
-                </div>
-                <div class="nav-item px-1 hover">
-                    <a class="nav-link fs-6 px-2" asp-action="Crypto" asp-controller="Home">
-                        <span class="oi fa-solid fa-user-group" aria-hidden="true"></span> Crypto
-                    </a>
-                </div>
-                <div class="nav-item px-1 hover">
-                    <a class="nav-link fs-6 px-2" asp-action="News" asp-controller="News">
-                        <span class="oi fa-solid fa-newspaper" aria-hidden="true"></span> News
-                    </a>
-                </div>
-                <div class="nav-item px-1 hover">
-                    <a class="nav-link fs-6 px-2" asp-action="Feed" asp-controller="Posts">
-                        <span class="oi fa-solid fa-chart-simple" aria-hidden="true"></span> Feed
-                    </a>
-                </div>
-                <div class="nav-item px-1 hover">
-                    <a class="nav-link fs-6 px-2" href="#">
-                        <span class="oi fa-solid fa-wallet" aria-hidden="true"></span> Friends
-                    </a>
-                </div>
-
-                <!-- Direct messages -->
-                <h5 class="nav-title">Direct Messages</h5>
-                <div class="nav-item px-3">
-                    <a style="text-decoration: none;" class="direct-message-item" href="#">
-                        <span class="profile-picture">
-                            <img class="profile-picture-image" src="~/images/navbar/patrik.png" alt="pfp">
-                            <span class="activity-status"><img class="status-image" src="~/images/navbar/green.png" alt="sts"></span>
-                        </span>
-                        <div id="patrik" class="message-content">
-                            <p class="message-element">
-                                patrik
-                            </p>
-                        </div>
-                    </a>
-                    <a style="text-decoration: none;" class="direct-message-item" href="#">
-                        <span class="profile-picture">
-                            <img class="profile-picture-image" src="~/images/navbar/bob.jpeg" alt="pfp">
-                            <span class="activity-status"><img class="status-image" src="~/images/navbar/green.png" alt="sts"></span>
-                        </span>
-                        <div class="message-content">
-                            <p class="message-element">
-                                Bob
-                            </p>
-                        </div>
-                    </a>
-                    <a style="text-decoration: none;" class="direct-message-item" href="#">
-                        <span class="profile-picture">
-                            <img class="profile-picture-image" src="~/images/navbar/squid.jpg" alt="pfp">
-                            <span class="activity-status"><img class="status-image" src="~/images/navbar/green.png" alt="sts"></span>
-                        </span>
-                        <div class="message-content">
-                            <p class="message-element">
-                                Squid
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                <a class="show-all-btn">Show all</a>
-            </section>
-            <section>
-                <div class="nav-item px-1 hover">
-                    <a class="nav-link fs-6 px-2">
-                        <span class="oi fa-solid fa-circle-question" aria-hidden="true"></span> Ask Insighty
-                    </a>
-                </div>
-                <div class="nav-item px-1 hover">
-                    <a class="nav-link fs-6 px-2">
-                        <span class="oi fa-solid fa-gear" aria-hidden="true"></span> Settings
-                    </a>
-                </div>
-            </section>
-        </nav>
-    </div>
-    <div id="chat-box" class="chat-box-main-container d-flex flex-column hidden">
-        <header class="chat-box-header d-flex justify-content-center align-items-center flex-row">
-            <a href="#" class="hide-chatbox" id="chat-box-hide"><i class="fa fa-xmark"></i></a>
-        </header>
-        <div class="chat-box-messages-container d-flex justify-content-start flex-column">
-            <div class="message-begining d-flex align-items-center justify-content-center">
-                <p>This is the begining of your conversation!</p>
-            </div>
-            @{
-                for (int i = 0; i < 40; i++)
-                {
-                    <div class="chat-message-element d-flex align-items-end justify-content-end">
-                        <p class="chat-message-content message-owner">Hello I am David! @i</p>
-                    </div>
-                    <div class="chat-message-element d-flex align-items-start justify-content-start">
-                        <p class="chat-message-content">Hello I am David too! @i</p>
-                    </div>
-                }
-            }
-        </div>
-        <footer class="chat-box-footer">
-            <div class="chat-box-container">
-                <input class="chat-box-input" placeholder="message" />
-            </div>
-        </footer>
-    </div>
+    <partial name="_NavbarPartialView"/>
+    <partial name="_ChatPartialView" />
     <div class="page" id="page">
-        <header id="header" class="header d-flex justify-content-between align-items-center">
-            <div class="circle-bg" style="background-color: transparent; margin:0; width:60px;">
-                <div class="circle-bg" id="navbar-show">
-                    <a href="#" class="navbar-brand"><i class="fa fa-bars"></i></a>
-                </div>
-            </div>
-            <h1 class="header-page-title">Dashboard</h1>
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="circle-bg">
-                    <a href="#" class="navbar-brand" id="notifications-btn"><i class="fa fa-bell"></i></a>
-                </div>
-                <div class="circle-bg">
-                    <a href="#" class="navbar-brand" id="img-pfp-btn"><img class="img-pfp-head" src="~/images/navbar/shadow-boy-white-eyes-unique-cool-pfp-nft-13yuypusuweug9xn.jpg" /></a>
-                </div>
-            </div>
-        </header>
-        <div id="pf-menu" class="pf-view-ctr d-flex justify-content-end align-items-start hidden">
-            <div class="pf-view-pg d-flex justify-content-center align-items-center flex-column">
-                <div class="circle-bg hidden" id="pf-menu-hide">
-                    <a href="#" class="navbar-brand"><i class="fa fa-xmark"></i></a>
-                </div>
-                <div class="d-flex justify-content-center align-items-center">
-                    <h3>davidpetkov2006@gmail.com</h3>
-                </div>
-                <div class="d-flex justify-content-center align-items-center">
-                    <img class="img-pfp-menu" src="~/images/navbar/shadow-boy-white-eyes-unique-cool-pfp-nft-13yuypusuweug9xn.jpg" />
-                </div>
-                <div class="d-flex justify-content-center align-items-center">
-                    <h1>Welcome back, David</h1>
-                </div>
-                <div class="d-flex justify-content-center align-items-center">
-                    <a class="pfp-menu-btn" href="#">payment & Billing</a>
-                </div>
-                <div class="d-flex justify-content-center align-items-center">
-                    <div class="pfp-menu-actions-container d-flex justify-content-center align-items-center flex-column">
-                        <a class="pfp-menu-actions-btn" href="#">Manage profile</a>
-                        <a class="pfp-menu-actions-btn" href="#">Friend Requests</a>
-                        <a class="pfp-menu-actions-btn" href="#">Neshto drugo</a>
-                        <a class="pfp-menu-actions-btn" href="#">Log out</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="notifications-menu" class="pf-view-ctr d-flex justify-content-end align-items-start hidden">
-            <div class="pf-view-pg d-flex justify-content-center align-items-center flex-column">
-                <div class="circle-bg hidden" id="notifications-menu-hide">
-                    <a href="#" class="navbar-brand"><i class="fa fa-xmark"></i></a>
-                </div>
-                <div class="d-flex justify-content-center align-items-center flex-column">
-                    <h3>notification</h3>
-                    <h3>notification</h3>
-                    <h3>notification</h3>
-                    <h3>notification</h3>
-                </div>
-            </div>
-        </div>
+        <partial name="_HeaderPartialView" />
+        <partial name="_ProfileMenuPartialView" />
+        <partial name="_NotificationsPartialView" />
         <div class="container-main">
             <main id="main" role="main" class="pb-3">
                 @RenderBody()
@@ -195,165 +31,8 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $(window).scroll(function() {
-                var scroll = $(window).scrollTop();
-                var header = $('#header');
-                var initialColor = '#ececec';
-                var darkerColor = '#ffffff';
-
-                if (scroll > 50) {
-                    var ratio = (scroll - 50) / 150;
-                    var newColor = blendColors(initialColor, darkerColor, ratio);
-                    header.css('background-color', newColor);
-                } else {
-                    header.css('background-color', initialColor);
-                }
-            });
-
-            function blendColors(color1, color2, ratio) {
-                ratio = Math.min(1, Math.max(0, ratio));
-                var r = Math.round(parseInt(color1.substring(1, 3), 16) * (1 - ratio) + parseInt(color2.substring(1, 3), 16) * ratio);
-                var g = Math.round(parseInt(color1.substring(3, 5), 16) * (1 - ratio) + parseInt(color2.substring(3, 5), 16) * ratio);
-                var b = Math.round(parseInt(color1.substring(5, 7), 16) * (1 - ratio) + parseInt(color2.substring(5, 7), 16) * ratio);
-                return '#' + r.toString(16) + g.toString(16) + b.toString(16);
-            }
-        });
-    </script>
-    <script>
-        var main = document.getElementById('main');
-
-        var chatBoxHide = document.getElementById('chat-box-hide');
-        var chatBox = document.getElementById('chat-box');
-        var patrik = document.getElementById('patrik');
-
-        chatBoxHide.addEventListener('click', function () {
-            chatBox.classList.add('hidden');
-        });
-        patrik.addEventListener('click', function () {
-            chatBox.classList.remove('hidden');
-        });
-
-        var btnshow = document.getElementById('navbar-show');
-        var btnhide = document.getElementById('navbar-hide');
-        var navbar = document.getElementById('navbar');
-
-        var page = document.getElementById('page');
-
-        var profilebtn = document.getElementById('img-pfp-btn');
-        var profilebtnHide = document.getElementById('pf-menu-hide');
-        var pfmenu = document.getElementById('pf-menu');
-
-        var notificationsMenu = document.getElementById('notifications-menu');
-        var notificationsMenuHide = document.getElementById('notifications-menu-hide');
-        var notificationsBtn = document.getElementById('notifications-btn');
-
-        function checkSize() {
-            if (window.innerWidth > 780) {
-                navbar.classList.remove('hidden');
-                navbar.classList.remove('fixed-nav');
-                page.style.filter = 'none';
-                btnhide.classList.add('hidden');
-                btnshow.classList.add('hidden');
-            }
-            else {
-                btnshow.classList.remove('hidden');
-            }
-        }
-
-        window.onload = function () {
-            profilebtnHide.classList.add('hidden');
-            pfmenu.classList.add('hidden');
-
-            notificationsMenuHide.classList.add('hidden');
-            notificationsMenu.classList.add('hidden');
-
-            checkSize();
-        }
-
-        window.addEventListener('resize', function () {
-            if (window.innerWidth <= 420) {
-                profilebtnHide.classList.remove('hidden');
-
-                notificationsMenuHide.classList.remove('hidden');
-            }
-            else {
-                profilebtnHide.classList.add('hidden');
-
-                notificationsMenuHide.classList.add('hidden');
-            }
-            checkSize();
-        });
-
-        let isShownprf = false;
-
-        notificationsBtn.addEventListener('click', function () {
-            if (isShownprf) {
-                notificationsMenu.classList.add('hidden');
-                isShownprf = false;
-            }
-            else {
-                notificationsMenu.classList.remove('hidden');
-                pfmenu.classList.add('hidden');
-                isShown = false;
-                isShownprf = true;
-            }
-        });
-
-        notificationsMenuHide.addEventListener('click', function () {
-            notificationsMenu.classList.add('hidden');
-            isShownprf = false;
-        });
-
-        let isShown = false;
-
-        profilebtn.addEventListener('click', function () {
-            if (isShown) {
-                pfmenu.classList.add('hidden');
-                isShown = false;
-            }
-            else {
-                pfmenu.classList.remove('hidden');
-                notificationsMenu.classList.add('hidden');
-                isShownprf = false;
-                isShown = true;
-            }
-        });
-
-        profilebtnHide.addEventListener('click', function () {
-            pfmenu.classList.add('hidden');
-            isShown = false;
-        });
-
-        main.addEventListener('click', function () {
-            if (isShown) {
-                pfmenu.classList.add('hidden');
-                isShown = false;
-            } else if (isShownprf) {
-                notificationsMenu.classList.add('hidden');
-                isShownprf = false;
-            }
-        });
-
-        btnshow.addEventListener('click', function () {
-            if (window.innerWidth <= 780) {
-                navbar.classList.remove('hidden');
-                navbar.classList.add('fixed-nav');
-                page.style.filter = 'blur(2px)';
-                btnhide.classList.remove('hidden');
-            }
-        });
-
-        btnhide.addEventListener('click', function () {
-            if (window.innerWidth <= 780) {
-                navbar.classList.add('hidden');
-                navbar.classList.remove('fixed-nav');
-                page.style.filter = 'none';
-                btnhide.classList.add('hidden');
-            }
-        });
-    </script>
+    <script src="~/js/layout/headerscroll.js"></script>
+    <script src="~/js/layout/layoutactions.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lightweight-charts@3.6.1/dist/lightweight-charts.standalone.production.js"></script>
     <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
