--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Posts/Feed.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Posts/Feed.cshtml
@@ -1,4 +1,5 @@
-﻿@using Insightify.Framework.Pagination;
+﻿@    using Insightify.Framework.Pagination;
+    using Insightify.MVC.Models.Posts;
 @model Insightify.Framework.Pagination.Abstractions.IPage<PostViewModel>
 <div class="posts-container">
     <div class="sections-container">
