Create post should be working now

--- a/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/create-post.css
+++ b/src/Web/Insightify.MVC/Insightify.MVC/wwwroot/css/create-post.css
@@ -134,7 +134,9 @@
 }
 
 .uploaded-image-file{
-    width: 150px;
+    width: 250px;
+    border-radius: 10px;
+    margin: 10px;
 }
 
 .post-container {
