--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Posts/Feed.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Posts/Feed.cshtml
@@ -12,8 +12,8 @@
                         <header class="post-header">
                             <div class="post-header-info">
                                 <div class="post-header-image">
-                                    <img class="header-img-data" src="~/images/navbar/green.png" />
-                                    <h1 class="header-img-text">Author Name</h1>
+                                    <img class="header-img-data" src="~/images/navbar/shadow-boy-white-eyes-unique-cool-pfp-nft-13yuypusuweug9xn.jpg" />
+                                    <h1 class="header-img-text">David Petkov</h1>
                                 </div>
                                 <div class="post-header-hour">
                                     <h1><strong>‧</strong></h1>
@@ -94,8 +94,9 @@
                                 <header class="post-header">
                                     <div class="post-header-info">
                                         <div class="post-header-image">
-                                            <img class="header-img-data" src="/images/navbar/green.png" />
-                                            <h1 class="header-img-text">Author</h1>
+                                                <img class="header-img-data" src="/images/navbar/shadow-boy-white-eyes-unique-cool-pfp-nft-13yuypusuweug9xn.jpg" />
+                                            <h1 class="header-img-text">David Petkov</h1>
+                                                <img class="uploaded-image-file" src="${post.imageUrl}" alt="Image" />
                                         </div>
                                         <div class="post-header-hour">
                                             <h1><strong>‧</strong></h1>
